src/test/ui/async-await/async-fn-path-elision.stderr
error: hidden lifetime parameters in types are deprecated
  --> $DIR/async-fn-path-elision.rs:6:20
   |
LL | async fn error(lt: HasLifetime) {
   |                    ^^^^^^^^^^^ expected lifetime parameter
   |
note: the lint level is defined here
  --> $DIR/async-fn-path-elision.rs:2:9
   |
LL | #![deny(elided_lifetimes_in_paths)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^
help: indicate the anonymous lifetime
   |
LL | async fn error(lt: HasLifetime<'_>) {
   |                               ++++

error: hidden lifetime parameters in types are deprecated
  --> $DIR/async-fn-path-elision.rs:10:19
   |
LL | fn also_error(lt: HasLifetime) {
   |                   ^^^^^^^^^^^ expected lifetime parameter
   |
help: indicate the anonymous lifetime
   |
LL | fn also_error(lt: HasLifetime<'_>) {
   |                              ++++

error: aborting due to 2 previous errors

